--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body
 }
 .containerNavbar
 {
-    width: 100vw;
+    /* width: 100vw; */
     height: 120px;
     background:#fb5530;
     display: flex;
@@ -78,10 +78,13 @@ body
 
 /* ======================================== */
 
+
+/* ----------------------------- */
+
 /* container-2 */
 .container-2
 {
-    width: 100vw;
+    /* width: 100vw; */
     height: 160px;
     padding: 5px;
     display: flex;
@@ -139,19 +142,20 @@ body
 /* container-3 */
 .container-3
 {
-    width: 100vw;
+    /* width: 100vw; */
     height: 100vh;
     margin-top: 10px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background: rgb(55, 245, 220);
 }
 .KATEGORItext
 {
-    width: 90px;
+    width: 100%;
     height: 60px;
-    display: flex;
+    position: relative;
     /* background: #b5d6c7; */
 }
 h5
@@ -165,9 +169,14 @@ h5
 .container-3-2
 {
     width: 95vw;
-    height: 400px;
-    padding: 10px;
-    background-color:#f71414;
+    height: auto;
+    padding: 15px;
+    background-color:#fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
 }
 .container-3-2-1
 {
@@ -176,19 +185,25 @@ h5
     display: flex;
     align-content: center;
     justify-content: space-around;
-    background: #1d995b;
 }
 .box-3-2-1
 {
-    width: 120px;
-    height: 160px;
+    width: 125px;
+    height: 165px;
     /* background: #0e7bad; */
     transition: .5s;
+    text-align: center;
+    /* padding: 5px; */
+    position: relative;
+    top: 0;
+
 }
-.box-3-2-1 :hover
+.box-3-2-1:hover
 {
-   cursor: pointer;
-   transition: .5s;
+    cursor: pointer;
+    border: 1px solid #333;
+    border-radius: 5px;
+    top: -5px;
 }
 .boxImg-3-2-1
 {
@@ -206,29 +221,35 @@ h5
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background: #35e461; */
 }
 .container-3-2-1-0
 {
     width: 90vw;
     height: 160px;
     display: flex;
+    margin-top: 10px;
+    margin-bottom: 10px;
     align-content: center;
     justify-content: space-around;
-    /* background: #ffffff; */
     /* background: #05ad21; */
-
+    
 }
 .box-3-2-1-0
 { 
     width: 120px;
     height: 160px;
+    text-align: center;
     /* background: #f5f5f5; */
+    position: relative;
+    transition: .5s;
+    top: 0;
 }
-.box-3-2-1-0 :hover
+.box-3-2-1-0:hover
 {
-    background-color: #fb5530;
     cursor: pointer;
+    border: 1px solid #333;
+    border-radius: 5px;
+    top: -5px;
 }
 .boxImg-3-2-1-0
 {
