--- a/css/style.css
+++ b/css/style.css
@@ -183,8 +183,10 @@ h5
     width: 90vw;
     height: 160px;
     display: flex;
+    margin-top: 10px;
     align-content: center;
     justify-content: space-around;
+    
 }
 .box-3-2-1
 {
@@ -196,6 +198,7 @@ h5
     /* padding: 5px; */
     position: relative;
     top: 0;
+    border: 1px solid #333;
 
 }
 .box-3-2-1:hover
@@ -204,6 +207,7 @@ h5
     border: 1px solid #333;
     border-radius: 5px;
     top: -5px;
+    outline: auto;
 }
 .boxImg-3-2-1
 {
@@ -236,13 +240,13 @@ h5
 }
 .box-3-2-1-0
 { 
-    width: 120px;
-    height: 160px;
-    text-align: center;
-    /* background: #f5f5f5; */
-    position: relative;
+    width: 125px;
+    height: 165px;
     transition: .5s;
+    text-align: center;
+    position: relative;
     top: 0;
+    border: 1px solid #333;
 }
 .box-3-2-1-0:hover
 {
@@ -250,6 +254,7 @@ h5
     border: 1px solid #333;
     border-radius: 5px;
     top: -5px;
+    outline: auto;
 }
 .boxImg-3-2-1-0
 {
