--- a/css/style.css
+++ b/css/style.css
@@ -112,13 +112,20 @@ body
 .box-2 .imgBox img
 {
     width: 100%;
-    filter: none;
+    filter: noen;
     display: flex;
     justify-content: center;
     align-content: center;
     gap: 10px;
     /* background: #f5f5f5; */
 }
+.box-2 .imgBox img:hover
+{
+    cursor: pointer;
+    background-color: aqua;
+}
+
+
 .box-2 .textBox
 {
     width: 100%;
